server: Change order of default config
- If you uncommented the [[cln_array]] section it would cause the other lightning parameters to be improperly read

--- a/server/captaind.default.toml
+++ b/server/captaind.default.toml
@@ -41,8 +41,15 @@ forfeit_watcher_min_balance = "1 btc"
 # The interval to rebroadcast transactions
 transaction_rebroadcast_interval = "1m"
 
-# FIXME Expiry delta of HTLCs
-htlc_expiry_delta = 6
+# A public service announcement to send on each client-server handshake request
+#
+# Clients are supposed to display this message to their users.
+#handshake_psa = "Welcome to the most Awesome Ark Server!"
+
+# Endpoint for OpenTelemetry collector
+#otel_collector_endpoint = "http://127.0.0.1:4000"
+# Probability of enabling OpenTelemetry tracing
+#otel_tracing_sampler = "0.5"
 
 
 ##########
@@ -71,16 +78,8 @@ round_tx_feerate = "2500sat/kwu"
 # LIGHTNING #
 #############
 
-#[[cln_array]]
-#uri = "http://127.0.0.1:8000"
-#priority = 10
-#server_cert_path = "/etc/cln/server.cert"
-#client_cert_path = "/etc/cln/client.cert"
-#client_key_path = "/etc/cln/client.key"
-#hodl_invoice.uri = "http://127.0.0.1:8001"
-#hodl_invoice.server_cert_path = "/etc/cln/hold/server.cert"
-#hodl_invoice.client_cert_path = "/etc/cln/hold/client.cert"
-#hodl_invoice.client_key_path = "/etc/cln/chold/lient.key"
+# FIXME Expiry delta of HTLCs
+htlc_expiry_delta = 6
 
 # Interval to retry connecting to disconnected CLN nodes
 cln_reconnect_interval = "10s"
@@ -103,15 +102,18 @@ invoice_poll_interval = "30s"
 # Timeout on the HTLC subscription RPC call
 htlc_subscription_timeout = "10m"
 
-# A public service announcement to send on each client-server handshake request
-#
-# Clients are supposed to display this message to their users.
-#handshake_psa = "Welcome to the most Awesome Ark Server!"
-
-# Endpoint for OpenTelemetry collector
-#otel_collector_endpoint = "http://127.0.0.1:4000"
-# Probability of enabling OpenTelemetry tracing
-#otel_tracing_sampler = "0.5"
+# This allows you to configure one or more lightning nodes for the server to use. Just add as
+# many [[cln_array]] entries as you need!
+#[[cln_array]]
+#uri = "http://127.0.0.1:8000"
+#priority = 10
+#server_cert_path = "/etc/cln/server.cert"
+#client_cert_path = "/etc/cln/client.cert"
+#client_key_path = "/etc/cln/client.key"
+#hodl_invoice.uri = "http://127.0.0.1:8001"
+#hodl_invoice.server_cert_path = "/etc/cln/hold/server.cert"
+#hodl_invoice.client_cert_path = "/etc/cln/hold/client.cert"
+#hodl_invoice.client_key_path = "/etc/cln/chold/lient.key"
 
 
 ################
