--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -35,3 +35,7 @@ async-trait = { version = "0.1.88", optional = true }
 
 # bdk
 bdk_wallet = { version = "2.1.0", optional = true }
+
+
+[dev-dependencies]
+rmp-serde.workspace = true
