--- a/.woodpecker/bark-release.yml
+++ b/.woodpecker/bark-release.yml
@@ -88,7 +88,7 @@ steps:
 
   - name: push-bark-to-docker
     when:
-      - evaluate: 'CI_PIPELINE_EVENT == "tag" && CI_COMMIT_REF contains "refs/tags/bark-" && CI_REPO_URL == "https://codeberg.org/ark-bitcoin/bark"'
+      - evaluate: 'CI_PIPELINE_EVENT == "tag" && CI_COMMIT_REF contains "refs/tags/bark-" && CI_REPO_URL == "https://gitlab.com/ark-bitcoin/bark"'
     failure: ignore
     depends_on: build-and-push-bark-to-registry
     # When this task fails make sure the sha256 is still available.
