--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -2,7 +2,7 @@ when:
   - event: pull_request
   - event: manual
   - event: tag
-  - evaluate: 'CI_PIPELINE_EVENT == "push" && CI_COMMIT_BRANCH == "master" && CI_REPO_URL == "https://codeberg.org/ark-bitcoin/bark"'
+  - evaluate: 'CI_PIPELINE_EVENT == "push" && CI_COMMIT_BRANCH == "master" && CI_REPO_URL == "https://gitlab.com/ark-bitcoin/bark"'
 
 clone:
   - name: clone
