--- a/bitcoin-ext/Cargo.toml
+++ b/bitcoin-ext/Cargo.toml
@@ -2,8 +2,8 @@
 name = "bark-bitcoin-ext"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
-authors = [ "Steven Roose <steven@roose.io>" ]
-repository = "https://codeberg.org/ark-bitcoin/bark"
+authors = [ "Team Second <hello@second.tech>" ]
+repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Extension library to the rust-bitcoin ecosystem crates used in bark"
 edition = "2024"
 
