--- a/cln-rpc/Cargo.toml
+++ b/cln-rpc/Cargo.toml
@@ -2,8 +2,8 @@
 name = "bark-cln-rpc"
 version = "0.2.0+cln.25.09-hold.0.3.2.patched"
 license = "CC0-1.0"
-authors = [ "Steven Roose <steven@roose.io>" ]
-repository = "https://codeberg.org/ark-bitcoin/bark"
+authors = [ "Team Second <hello@second.tech>" ]
+repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Generated gRPC code for c-lightning used in bark"
 edition = "2024"
 
