--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -2,9 +2,9 @@
 name = "ark-lib"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
-authors = [ "Steven Roose <steven@roose.io>" ]
+authors = [ "Team Second <hello@second.tech>" ]
 edition = "2024"
-repository = "https://codeberg.org/ark-bitcoin/bark"
+repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Primitives for the Ark protocol and bark implementation"
 
 [lib]
