--- a/server-rpc/Cargo.toml
+++ b/server-rpc/Cargo.toml
@@ -2,8 +2,8 @@
 name = "bark-server-rpc"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
-authors = [ "Steven Roose <steven@roose.io>" ]
-repository = "https://codeberg.org/ark-bitcoin/bark"
+authors = [ "Team Second <hello@second.tech>" ]
+repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "gRPC code for bark-server API"
 edition = "2024"
 
