--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,8 +2,8 @@
 name = "bark-server"
 version = "0.1.0-beta.1"
 license = "CC0-1.0"
-authors = ["Steven Roose <steven@roose.io>"]
-repository = "https://codeberg.org/ark-bitcoin/bark"
+authors = [ "Team Second <hello@second.tech>" ]
+repository = "https://gitlab.com/ark-bitcoin/bark"
 description = "Server implementation of the bitcoin Ark protocol built by Second"
 edition = "2024"
 
