woodpecker: This hack should be reverted
Allows to get

https://gitlab.com/ark-bitcoin/bark/-/merge_requests/1233

merged without updating the docker-image

--- a/.woodpecker/tests.yml
+++ b/.woodpecker/tests.yml
@@ -30,6 +30,7 @@ steps:
       - git log --oneline | head -n 1
       - >
         nix develop .#default --command bash -c "
+          rm $(which bark)
           cargo version &&
           cargo build --workspace &&
           cargo install --locked --path bark-cli &&
