--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -6,6 +6,9 @@ authors = [ "Team Second <hello@second.tech>" ]
 description = "JSON definitions for the bark APIs"
 edition = "2024"
 
+[features]
+open-api = ["dep:utoipa"]
+
 [dependencies]
 # OWN
 ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
@@ -16,6 +19,8 @@ bitcoin.workspace = true
 serde.workspace = true
 humantime.workspace = true
 thiserror.workspace = true
+
+utoipa = { version = "5.4.0", optional = true }
 
 [dev-dependencies]
 serde_json.workspace = true
