--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -11,6 +11,7 @@ open-api = ["dep:utoipa"]
 
 [dependencies]
 # OWN
+bark-wallet = { path = "../bark" }
 ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
 bark-bitcoin-ext = { version = "0.1.0-beta.1", path = "../bitcoin-ext", default-features = false }
 
