--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -26,7 +26,6 @@ ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
 bark-bitcoin-ext = { version = "0.1.0-beta.1", path = "../bitcoin-ext", default-features = false, features = [
 	"bdk", "esplora", "rpc",
 ]}
-bark-json = { version = "0.1.0-beta.1", path = "../bark-json" }
 bark-server-rpc = { version = "0.1.0-beta.1", path = "../server-rpc" }
 
 # EXPORTED
@@ -34,6 +33,7 @@ bitcoin.workspace = true
 lightning-invoice.workspace = true
 lnurl-rs.workspace = true
 anyhow.workspace = true
+thiserror.workspace = true
 log.workspace = true
 serde.workspace = true
 
