--- a/bark-cli/Cargo.toml
+++ b/bark-cli/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bark-cli"
 version = "0.1.0-beta.1"
 edition = "2024"
-authors = ["hello@second.tech"]
+authors = ["Team Second <hello@second.tech>"]
 
 [[bin]]
 name = "bark"
