--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -12,6 +12,9 @@ bark-wallet = { path = "../bark" }
 ark-lib = { version = "0.1.0-beta.1", path = "../lib" }
 bark-bitcoin-ext = { version = "0.1.0-beta.1", path = "../bitcoin-ext", default-features = false }
 
+# INTERNAL
+hal = { version = "=0.10.0", default-features = false }
+
 # EXPORTED
 bitcoin.workspace = true
 serde.workspace = true
