--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 
 [features]
 default = ["tls-native-roots", "rand"]
-onchain_bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk", "hal"]
+onchain_bdk = ["bdk_wallet", "bark-bitcoin-ext/bdk"]
 tls-native-roots = ["tonic/tls-native-roots"]
 tls-webpki-roots = ["tonic/tls-webpki-roots"]
 rand = ["dep:rand", "bitcoin/rand", "bip39/rand"]
@@ -58,7 +58,6 @@ futures.workspace = true
 # Prebuilt BDK Wallet only
 bdk_wallet = { workspace = true, features = [ "rusqlite" ], optional = true }
 
-hal = { version = "=0.10.0", default-features = false, optional = true}
 # For some doctests
 rand = { workspace = true, optional = true }
 
