--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -20,8 +20,9 @@ bitcoin.workspace = true
 serde.workspace = true
 humantime.workspace = true
 thiserror.workspace = true
+chrono.workspace = true
 
-utoipa = { version = "5.4.0", optional = true }
+utoipa = { version = "5.4.0", optional = true, features = ["chrono"] }
 
 [dev-dependencies]
 serde_json.workspace = true
