server: Add configurable minimum board amount
We want to have some minimum board amount that the server will
cosign for so they don't sign barely economical boards or anything
just above dust.

The default config is set to 20 000 sats which is similar to that
for minimum lightning channel capacity. Not much more to it than that.

--- a/server/captaind.default.toml
+++ b/server/captaind.default.toml
@@ -17,6 +17,9 @@ vtxo_lifetime = 4320
 # Maximum value of VTXOs
 #max_vtxo_amount = "1000000 sat"
 
+# Minimum amount required for board transactions
+min_board_amount = "20000 sat"
+
 # The time between execution of each exit clause of the VTXO, in blocks
 vtxo_exit_delta = 144
 
