--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -44,6 +44,7 @@ lazy_static.workspace = true
 chrono.workspace = true
 serde_json.workspace = true
 rmp-serde.workspace = true
+config.workspace = true
 
 bip39.workspace = true
 bdk_core = { workspace = true }
