--- a/bark-cli/Cargo.toml
+++ b/bark-cli/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin/barkd/main.rs"
 [dependencies]
 ark-lib = { version = "0.1.0-beta.2", path = "../lib" }
 bark-json = { version = "0.1.0-beta.2", path = "../bark-json" }
-bark-wallet = { version = "0.1.0-beta.2", path = "../bark", features = [ "onchain_bdk" ] }
+bark-wallet = { version = "0.1.0-beta.2", path = "../bark", features = ["onchain_bdk"] }
 bark-bitcoin-ext = { version = "0.1.0-beta.2", path = "../bitcoin-ext" }
 bark-server-rpc = { version = "0.1.0-beta.2", path = "../server-rpc" }
 bark-rest = { version = "0.1.0-beta.2", path = "../bark-rest" }
@@ -27,6 +27,7 @@ bitcoin.workspace = true
 bip39.workspace = true
 clap.workspace = true
 chrono.workspace = true
+lazy_static.workspace = true
 env_logger.workspace = true
 lightning.workspace = true
 lightning-invoice.workspace = true
@@ -38,6 +39,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 toml.workspace = true
 tonic.workspace = true
+futures.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 
 
