--- a/bark-rest/Cargo.toml
+++ b/bark-rest/Cargo.toml
@@ -16,6 +16,7 @@ serde_json.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tower.workspace = true
+log.workspace = true
 
 axum = { version = "0.8.4", features = ["macros", "tokio", "http2", "query", "json"], default-features = false }
 tower-http = { version = "0.5", features = ["cors", "trace"] }
