--- a/bark-cli/Cargo.toml
+++ b/bark-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bark-cli"
-version = "0.1.0-beta.1"
+version = "0.1.0-beta.2"
 edition = "2024"
 authors = ["Team Second <hello@second.tech>"]
 
@@ -13,6 +13,12 @@ name = "barkd"
 path = "src/bin/barkd/main.rs"
 
 [dependencies]
+ark-lib = { version = "0.1.0-beta.2", path = "../lib" }
+bark-json = { version = "0.1.0-beta.2", path = "../bark-json" }
+bark-wallet = { version = "0.1.0-beta.2", path = "../bark", features = [ "onchain_bdk" ] }
+bark-bitcoin-ext = { version = "0.1.0-beta.2", path = "../bitcoin-ext" }
+bark-server-rpc = { version = "0.1.0-beta.2", path = "../server-rpc" }
+
 anyhow.workspace = true
 bitcoin.workspace = true
 bip39.workspace = true
@@ -32,8 +38,3 @@ tokio = { workspace = true, features = ["macros"] }
 
 home = "=0.5.9"
 
-ark-lib = { path = "../lib" }
-bark-json = { path = "../bark-json" }
-bark-wallet = { path = "../bark", features=["onchain_bdk"] }
-bark-bitcoin-ext = { path = "../bitcoin-ext"}
-bark-server-rpc = { path ="../server-rpc" }
