--- a/.woodpecker/helpers.yml
+++ b/.woodpecker/helpers.yml
@@ -18,11 +18,18 @@ steps:
     volumes:
       - /data:/host/data
     commands:
-      - sudo chown -R nixuser:nixbld /woodpecker
-      - tar -czf "/host/data/test/${CI_COMMIT_SHA}.tar.gz" "/host/data/test/${CI_COMMIT_SHA}/"
-      - sudo mv "/host/data/test/${CI_COMMIT_SHA}.tar.gz" "/host/data/test/${CI_COMMIT_SHA}/"
-      - echo "Test data tar.gz     -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/${CI_COMMIT_SHA}.tar.gz"
-      - echo "Test data URL        -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
+      - |
+        SRC="/host/data/test/${CI_COMMIT_SHA}"
+        DST="/host/data/test/${CI_COMMIT_SHA}.tar.gz"
+        if [ -d "$SRC" ]; then
+          echo "Tarring test data: $SRC"
+          tar -czf "$DST" "$SRC/"
+          sudo mv "$DST" "$SRC/"
+          echo "Test data tar.gz     -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/${CI_COMMIT_SHA}.tar.gz"
+          echo "Test data URL        -> https://ci.2nd.dev/testdata/${CI_COMMIT_SHA}/"
+        else
+          echo "Warning: Test data directory $SRC does not exist – skipping tar"
+        fi
 
   - name: tar-and-print-codecov-data
     when:
@@ -31,10 +38,18 @@ steps:
     volumes:
       - /data:/host/data
     commands:
-      - tar -czf "/host/data/codecov/${CI_COMMIT_SHA}.tar.gz" "/host/data/codecov/${CI_COMMIT_SHA}/"
-      - sudo mv "/host/data/codecov/${CI_COMMIT_SHA}.tar.gz" "/host/data/codecov/${CI_COMMIT_SHA}/"
-      - echo "Code Coverage tar.gz -> https://ci.2nd.dev/codecov/${CI_COMMIT_SHA}/${CI_COMMIT_SHA}.tar.gz"
-      - echo "Code Coverage URL    -> https://ci.2nd.dev/codecov/${CI_COMMIT_SHA}/html/index.html"
+      - |
+        SRC="/host/data/codecov/${CI_COMMIT_SHA}"
+        DST="/host/data/codecov/${CI_COMMIT_SHA}.tar.gz"
+        if [ -d "$SRC" ]; then
+          echo "Tarring codecov data: $SRC"
+          tar -czf "$DST" "$SRC/"
+          sudo mv "$DST" "$SRC/"
+          echo "Code Coverage tar.gz -> https://ci.2nd.dev/codecov/${CI_COMMIT_SHA}/${CI_COMMIT_SHA}.tar.gz"
+          echo "Code Coverage URL    -> https://ci.2nd.dev/codecov/${CI_COMMIT_SHA}/html/index.html"
+        else
+          echo "Warning: Codecov directory $SRC does not exist – skipping tar"
+        fi
 
   - name: generate-rustdocs
     when:
@@ -44,6 +59,7 @@ steps:
     volumes:
       - /data:/host/data
     commands:
+      - sudo chown -R nixuser:nixbld /woodpecker
       - nix develop .#default --command bash -c "just rustdocs"
       - sudo cp -r rustdocs /host/data/
       - bash contrib/generate-index.sh /host/data/rustdocs/doc
