--- a/.woodpecker/helpers.yml
+++ b/.woodpecker/helpers.yml
@@ -18,6 +18,7 @@ steps:
     volumes:
       - /data:/host/data
     commands:
+      - sudo chown -R nixuser:nixbld /woodpecker
       - |
         SRC="/host/data/test/${CI_COMMIT_SHA}"
         DST="/host/data/test/${CI_COMMIT_SHA}.tar.gz"
@@ -38,6 +39,7 @@ steps:
     volumes:
       - /data:/host/data
     commands:
+      - sudo chown -R nixuser:nixbld /woodpecker
       - |
         SRC="/host/data/codecov/${CI_COMMIT_SHA}"
         DST="/host/data/codecov/${CI_COMMIT_SHA}.tar.gz"
@@ -70,6 +72,7 @@ steps:
       - event: tag
     image: registry.2nd.dev/build:25
     commands:
+      - sudo chown -R nixuser:nixbld /woodpecker
       - bash ./contrib/check-versions.sh "${CI_COMMIT_TAG}"
 
   - name: check-gitlab-release
@@ -77,6 +80,7 @@ steps:
       - event: tag
     image: registry.2nd.dev/build:25
     commands:
+      - sudo chown -R nixuser:nixbld /woodpecker
       - bash ./contrib/check-gitlab-release.sh "${CI_COMMIT_TAG}"
 
 depends_on:
