testing: fix claim twice test

--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -30,7 +30,7 @@ serde.workspace = true
 serde_json.workspace = true
 toml.workspace = true
 bitcoin.workspace = true
-bip39.workspace = true
+bip39 = { workspace = true, features = ["rand"] }
 bdk_esplora.workspace = true
 log.workspace = true
 env_logger.workspace = true
