Update .gitattributes for gitlab
The -diff flag ensures the auto generated client files
will not be shown in the diff by default.

The -linguist-vendored=true ensures it isn't counted in language
and code statistics.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-open-api.json text diff=json linguist-generated=true
-clients/rust/** linguist-generated=true
+open-api.json text diff=json linguist-generated=true linguist-vendored=true -diff
+clients/rust/** linguist-generated=true linguist-vendored=true -diff
