--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -40,6 +40,7 @@ refinery = { version = "0.8.14", default-features = false, features = ["tokio-po
 uuid = { version = "1.17.0", features = ["v4"] }
 ipnet = "2.11.0"
 trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
+smallvec = "1.13"
 
 lazy_static.workspace = true
 env_logger.workspace = true
