bark: Remove movement IDs from the VTXO table
bark-json: Introduce onchain_bdk feature for onchain module

- Allows us to implement other useful from fields

--- a/bark-json/Cargo.toml
+++ b/bark-json/Cargo.toml
@@ -6,6 +6,10 @@ authors = [ "Team Second <hello@second.tech>" ]
 description = "JSON definitions for the bark APIs"
 edition = "2024"
 
+[features]
+default = ["onchain_bdk"]
+onchain_bdk = ["bark-wallet/onchain_bdk", "bark-bitcoin-ext/bdk"]
+
 [dependencies]
 # OWN
 bark-wallet = { version = "0.1.0-beta.3", path = "../bark" }
